# BusSystem

./: Bus.cpp  Bus.hpp  CMakeLists.txt  MetroPass.cpp  MetroPass.hpp  Passenger.cpp  Passenger.hpp  People.cpp  People.hpp  Route.cpp  Route.hpp  Stop.cpp  Stop.hpp  Transaction.cpp  Transaction.hpp  defaultPassengers.txt  main.cpp  main[1].cpp
